5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1745_1522.log
== TEST (2019-05-15 14:06:09) 
-- CODE:
k = int(input("Infantarial: "))
j = int(input("Cavalria: "))
pk = float(input("Perc. infatarial: "))
pj = float(input("Perc. cavalaria: "))

l = 50000
c = 0
h = 0
y = 0

while((j + k) < l):
	h = (k * pk) / 100
	j = j + y
	c = j + 1
print(c)
	
-- ERROR:
File "XXXX", line 6
    while (estoque + quantidade > 0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:12:01) 
-- CODE:
k = int(input("Infantarial: "))
j = int(input("Cavaalria: "))
pk = float(input("Perc. infatarial: "))
pj = float(input("Perc. cavalaria: "))

l = 50000
c = 0
h = 0
y = 0

while((j + k) < l):
	h = (k * pk) / 100
	j = j + y
	c = j + 1
print(c)
	
-- EXECUTION TIME:
364.716
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:25:50) 
-- CODE:
m = int(input("Quant. de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 1
x = 0
y = 0

while ((dm + m) < meses):
	x = (m * mo) / 100
	r = r + x
	y = r + 1
print(y)
	
	
-- ERROR:
File "XXXX", line 6
    while (estoque + quantidade > 0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:29:36) 
-- CODE:
m = int(input("Quant. de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 12
x = 0
y = 0

while ((dm + m) < meses):
	x = (m * mo) / 100
	r = r + x
	y = r + 1
print(y)
	
	
-- ERROR:
File "XXXX", line 6
    while (estoque + quantidade > 0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:56:24) 
-- CODE:
m = int(input("Quant. de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 1
x = 0
y = 0

while ((dm + m) < meses):
	x = (m * mo) / 100
	r = r + x
	y = r + 1
print(y)
	
	
-- ERROR:
File "XXXX", line 6
    while (estoque + quantidade > 0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:08:42) 
-- CODE:
m = int(input("Quant. de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 1
x = 0
y = 0

while ((dm + m) < meses):
	x = (m * mo) / 100
	r = r + x
	y = x + 1
	print(y)
	
	
-- ERROR:
File "XXXX", line 6
    while (estoque + quantidade > 0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:09:03) 
-- CODE:
m = int(input("Quant. de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 1
x = 0
y = 0

while ((dm + m) < meses):
	x = (m * mo) / 100
	r = r + x
	y = x + 1
print(y)
	
	
-- ERROR:
File "XXXX", line 6
    while (estoque + quantidade > 0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:13:28) 
-- CODE:
m = int(input("Quant. de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 1
x = 0
y = 0

while ((dm + m) < meses):
	x = (m * mo) / 100
	r = r + x
	y = x + r
	print(y)
	
	
-- ERROR:
File "XXXX", line 6
    while (estoque + quantidade > 0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:17:48) 
-- CODE:
m = int(input("Quant. de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 1
x = 0
y = 0

while ((dm + m) < meses):
	x = (m * mo) / 100
	r = r + x
	y = (dm * r) / 100
	meses = meses + 1
print(meses)
	
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:19:00) 
-- CODE:
m = int(input("Quant. de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))


meses = 0
x = 0
y = 0

while ((dm + m) < meses):
	x = (m * mo) / 100
	r = r + x
	y = (dm * r) / 100
	meses = meses + 1
print(meses)
	
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:19:40) 
-- CODE:
m = int(input("Quant. de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))


meses = 1
x = 0
y = 0

while ((dm + m) < meses):
	x = (m * mo) / 100
	r = r + x
	y = (dm * r) / 100
	meses = meses + 1
print(meses)
	
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:20:10) 
-- CODE:
m = int(input("Quant. de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))


meses = 0
x = 0
y = 0

while ((dm + m) < meses):
	x = (m * mo) / 100
	r = r + x
	y = (dm * r) / 100
	meses = meses + 1
print(meses)
	
	
-- EXECUTION TIME:
0.201162
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
0
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
0
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:23:12) 
-- CODE:
m = int(input("Quant. de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 0
x = 0
y = 0

while ((dm + m) < meses):
	x = (m * mo) / 100
	r = r + x
	y = (dm * r) / 100
	mo = mo + y 
	meses = meses + 1
print(meses)
	
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:25:30) 
-- CODE:
m = int(input("Quant de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 1
x = 0
y = 0

while ((dm + m) < meses):
	x = (m * mo) / 100
	r = r + x
	y = (dm * r) / 100
	mo = mo + y 
	meses = meses + 1
print(meses)
	
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:26:18) 
-- CODE:
m = int(input("Quant de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 160
x = 0
y = 0

while ((dm + m) < meses):
	x = (m * mo) / 100
	r = r + x
	y = (dm * r) / 100
	mo = mo + y 
	meses = meses + 1
print(meses)
	
	
-- OUTPUT:
160
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:26:52) 
-- CODE:
m = int(input("Quant de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 1000
x = 0
y = 0

while ((dm + m) < meses):
	x = (m * mo) / 100
	r = r + x
	y = (dm * r) / 100
	mo = mo + y 
	meses = meses + 1
print(meses)
	
	
-- OUTPUT:
1000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:27:02) 
-- CODE:
m = int(input("Quant de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 1000
x = 0
y = 0

while ((dm + m) < meses):
	x = (m * mo) / 100
	r = r + x
	y = (dm * r) / 100
	mo = mo + y 
	meses = meses + 1
print(meses)
	
	
-- OUTPUT:
1000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:38:37) 
-- CODE:
m = int(input("Quant de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 1
x = 0
y = 0

while((m + mo) > r):
	x = (m * mo) / 100
	r = r + x
	y = (dm * r) / 100
	mo = mo + y 
	meses = meses + 1
print(meses)
	
	
-- OUTPUT:
85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:40:42) 
-- CODE:
m = int(input("Quant de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 1
x = 0
y = 0

while((m - dm * mo) > r):
	x = (m * mo) / 100
	r = r + x
	y = (dm * r) / 100
	mo = mo + y 
	meses = meses + 1
print(meses)
	
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:41:17) 
-- CODE:
m = int(input("Quant de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 1
x = 0
y = 0

while((m - dm) * mo) > r:
	x = (m * mo) / 100
	r = r + x
	y = (dm * r) / 100
	mo = mo + y 
	meses = meses + 1
print(meses)
	
	
-- OUTPUT:
85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:43:20) 
-- CODE:
m = int(input("Quant de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 1
x = 0
y = 0

while(mo + m) > r:
	x = (m * mo) / 100
	r = r + x
	y = (dm * r) / 100
	mo = mo + y 
	meses = meses + 1
print(meses)
	
	
-- OUTPUT:
85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:44:23) 
-- CODE:
m = int(input("Quant de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 1
x = 0
y = 0

while((dm + m) > r):
	x = (m * mo) / 100
	r = r + x
	y = (dm * r) / 100
	mo = mo + y 
	meses = meses + 1
print(meses)
	
	
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:45:47) 
-- CODE:
m = int(input("Quant de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 1
x = 0
y = 0

while((dm + m) >= r):
	x = (m * mo) / 100
	r = r + x
	y = (dm * r) / 100
	mo = mo + y 
	meses = meses + 1
print(meses)
	
	
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:46:49) 
-- CODE:
m = int(input("Quant de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 1
x = 0
y = 0

while((mo + m) >= r):
	x = (m * mo) / 100
	r = r + x
	y = (dm * r) / 100
	mo = mo + y 
	meses = meses + 1
print(meses)
	
	
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:46:55) 
-- CODE:
m = int(input("Quant de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 1
x = 0
y = 0

while((mo + m) >= r):
	x = (m * mo) / 100
	r = r + x
	y = (dm * r) / 100
	mo = mo + y 
	meses = meses + 1
print(meses)
	
	
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:46:56) 
-- CODE:
m = int(input("Quant de moedas: "))
dm = int(input("Despesas mensal: "))
mo= float(input("Moedas de ouro : "))
r = float(input("Moedas roubadas: "))

meses = 1
x = 0
y = 0

while((mo + m) >= r):
	x = (m * mo) / 100
	r = r + x
	y = (dm * r) / 100
	mo = mo + y 
	meses = meses + 1
print(meses)
	
	
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
